welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:9: error: ')' expected but ';' found.
	gauche();gauche()
                ^Balin:10: error: ';' expected but 'while' found.
	while(!estSurBiscuit(){
        ^